--- a/dev/css/sakai/sakai.show.css
+++ b/dev/css/sakai/sakai.show.css
@@ -30,6 +30,6 @@ a.embedcontent_download_link, p.embedcontent_actual_description {font-size:11px;
 .messageInformation #realtime {font-weight:bold;color:#000;}
 
 .block_image{display:block;}
-.block_image_right{display:block;float:right;}
+.block_image_right{display:block;float:left;}
 .block_image_left{display:block;float:right;}
 
